# 2DDraw_autogen

./: CMakeLists.txt  README.md  readme.md
src/: main.cpp
src/core/: AreaShape.cpp  AreaShape.h  LineShape.cpp  LineShape.h  Shape.h
src/core/shapes/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h
src/ui/: Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h
